change h2 to header

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="backImg">
-      <div class="profile">
-        <img src="img/profile2.jpg">
+      <main class="profile">
+        <img src="img/profile2.jpg" alt="Jonathan Lawrence">
         <div class="profileText">
-          <h2>Jonathan Lawrence</h2>
+          <header>Jonathan Lawrence</header>
           <h3>Lanett, Alabama</h2>
           <p>BEGINNER WEB DEVELOPER</p>
         </div>
@@ -22,7 +22,7 @@
           <a href="https://github.com/lawrencejon" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
           <a href="https://www.instagram.com/jonathanlawrence97/?hl=en" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
         </div>
-      </div>
+      </main>
     </div>
   </body>
 </html>
