--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
             <input type="textarea" id="message" name="message" placeholder="YOUR MESSAGE"></textarea>
             <input type="submit" value="Send Message">
         </form>
+        <div id="resume-download">
+            <a href="pdf/Resume.pdf" target="_blank">Download My Resume</a>
+
+        </div>
         <ul id="social-links">
             </li>
             <li>
