added calculator project
Added js calculator project and removed unnecesary id's.

--- a/index.html
+++ b/index.html
@@ -35,21 +35,28 @@
 
     <h2 id="project-heading">Things I've Built</h2>
     <section id="projects">
-        <div id="box-1" class="project-tile">
+        <div class="project-tile">
+            <a href="https://codepen.io/jonathanlawrence/pen/xBVKGv" target="_blank">
+                <img src="img/project-js-calculator.PNG" alt="JavaScript Calculator">
+                <p><strong>JavaScript Calculator</strong></p>
+            </a>
+        </div>
+
+        <div class="project-tile">
             <a href="https://codepen.io/jonathanlawrence/pen/pGYWjG?editors=1100" target="_blank">
                 <img src="img/project-landing-page.PNG" alt="Product Landing Page">
                 <p><strong>Product Landing Page</strong></p>
             </a>
         </div>
         
-        <div id="box2" class="project-tile">
+        <div class="project-tile">
             <a href="https://codepen.io/jonathanlawrence/pen/zeMMpe" target="_blank">
                 <img src="img/project-form-page.PNG" alt="Survey Form">
                 <p><strong>Survey Form</strong></p>
             </a>
 
         </div>
-        <div id="box-3" class="project-tile">
+        <div class="project-tile">
             <a href="https://codepen.io/jonathanlawrence/pen/wNYgzr" target="_blank">
                 <img src="img/project-documentation-page.PNG" alt="Technical Documentation Page">
                 <p><strong>Documentation Page</strong></p>
@@ -57,7 +64,7 @@
 
         </div>
         
-        <div id="box-4" class="project-tile">
+        <div class="project-tile">
             <a href="https://codepen.io/jonathanlawrence/pen/yZjGjp" target="_blank">
                 <img src="img/project-tribute-page.PNG" alt="Tribute Page">
                 <p><strong>Tribute Page</strong></p>
