--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <input type="submit" value="Send Message">
         </form>
         <div id="resume-download">
-            <a href="pdf/Resume.pdf" target="_blank">Download My Resume</a>
+            <a href="pdf/resume-jonathan-lawrence.pdf" target="_blank">Download My Resume</a>
 
         </div>
         <ul id="social-links">
