changed section elements to divs
changed the <section> elements to <div> elements as an easy fix to an error  in W3 validation.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>           
     </header>
     
-    <section id="welcome-section">
+    <div id="welcome-section">
         <div id="welcome-text">
             <h1>Hi, I'm Jonathan</h1>
             <p>Passionate about Web design. I fiddled with HTML and
@@ -29,12 +29,12 @@
                 dive and truly learn the art of Web Development.
             </p>
         </div>
-    </section>
+    </div>
 
     <!--Projects Section-->
 
     <h2 id="project-heading">Things I've Built</h2>
-    <section id="projects">
+    <div id="projects">
         <div class="project-tile">
             <a href="https://codepen.io/jonathanlawrence/pen/xBVKGv" target="_blank">
                 <img src="img/project-js-calculator.PNG" alt="JavaScript Calculator">
@@ -73,9 +73,9 @@
         
      <!--Contact Me--> 
 
-    </section>
+    </div>
     <h2 id="contact-heading">Contact Me</h2>
-    <section id="contact">
+    <div id="contact">
         <form action="https://formspree.io/lawrencejon97@gmail.com" method="POST">
             <input type="text" id="name" name="name" placeholder="YOUR NAME">
             <input type="email" id="email" name="email" placeholder="YOUR EMAIL">
@@ -102,7 +102,7 @@
             </li>
 
         </ul>
-    </section>
+    </div>
     <footer>
     <p>©2019 Coded and designed by Jonathan Lawrence</p>
     </footer>
