changed <textarea> to <text>

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <form action="https://formspree.io/lawrencejon97@gmail.com" method="POST">
             <input type="text" id="name" name="name" placeholder="YOUR NAME">
             <input type="email" id="email" name="email" placeholder="YOUR EMAIL">
-            <input type="textarea" id="message" name="message" placeholder="YOUR MESSAGE">
+            <input type="text" id="message" name="message" placeholder="YOUR MESSAGE">
             <input type="submit" value="Send Message">
         </form>
         <div id="resume-download">
